--- a/charts/one37id-ibm-agent/templates/ingress.yaml
+++ b/charts/one37id-ibm-agent/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "one37id-ibm-agent.fullname" . -}}
-{{- $tlsSecret := .Values.tlsSecret -}}
+{{- $tlsSecret := .Values.global.tlsSecret -}}
 {{- $agentHostname := .Values.agentHostname -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
@@ -29,17 +29,13 @@ spec:
   {{- end }}
   {{- if .Values.ingress.tls }}
   tls:
-    {{- range .Values.ingress.tls }}
     - hosts:
-        {{- range .hosts }}
         - {{ $agentHostname | quote }}
-        {{- end }}
       secretName: {{ $tlsSecret }}
-    {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host | quote }}
+    # {{- range .Values.ingress.hosts }}
+    - host: {{ $agentHostname | quote }}
       http:
         paths:
           {{- range .paths }}
@@ -58,5 +54,5 @@ spec:
               servicePort: {{ .port }}
               {{- end }}
           {{- end }}
-    {{- end }}
+    # {{- end }}
 {{- end }}
