--- a/charts/one37id-ibm-agentjs/Chart.yaml
+++ b/charts/one37id-ibm-agentjs/Chart.yaml
@@ -1,24 +1,28 @@
 apiVersion: v2
 name: one37id-ibm-agentjs
-description: A Helm chart for Kubernetes
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
 type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
-appVersion: "1.16.0"
+description: A Helm chart to deploy the One37 Business Connector Agent JS
+home: https://one37id.com
+icon: https://www.one37id.com/images/connector.svg
+annotations:
+  category: Infrastructure
+  licenses: Apache-2.0
+dependencies:
+  - name: one37id-ibm-agent
+    repository: file://../one37id-ibm-agent
+    tags:
+    - one37id-ibm-agent
+    version: 1.2408.21-1
+keywords:
+  - businessconnector
+  - ssi
+  - oid4vc
+  - agent
+  - one37id
+  - one37
+  - one37id.com
+maintainers:
+  - name: One37 Solutions, Inc.
+    url: https://github.com/one37id/charts
+appVersion: "1.2408.21-1"
+version: 1.2408.21-1
