--- a/charts/one37id-ibm-agentjs/templates/service.yaml
+++ b/charts/one37id-ibm-agentjs/templates/service.yaml
@@ -7,9 +7,11 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    {{- range $key, $value := .Values.service.ports }}
+    - port: {{ $value }}
+      targetPort: {{ $value }}
       protocol: TCP
-      name: http
+      name: {{ $key}}
+    {{- end }}
   selector:
     {{- include "one37id-ibm-agentjs.selectorLabels" . | nindent 4 }}
