--- a/charts/one37id-tls-dev/Chart.yaml
+++ b/charts/one37id-tls-dev/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: one37id-tls-dev
-description: Deply the development TLS certificate for *.dev-one37.id
+description: Deploy the development TLS certificate for *.dev-one37.id
 type: application
-version: 1.2310.8
-appVersion: 1.2310.8
+version: 1.2408.21
+appVersion: 1.2408.21
