--- a/charts/one37id-pgsql/Chart.yaml
+++ b/charts/one37id-pgsql/Chart.yaml
@@ -12,9 +12,9 @@ dependencies:
     repository: oci://registry-1.docker.io/bitnamicharts
     tags:
     - postgresql
-    version: latest
+    version: 15.5.24
 maintainers:
   - name: One37 Solutions, Inc.
     url: https://github.com/one37id/charts
-appVersion: "1.2404.19-1"
-version: 1.2404.19-1
+appVersion: "1.2408.29-1"
+version: 1.2408.29-1
