--- a/charts/one37id-bc/templates/ingress.yaml
+++ b/charts/one37id-bc/templates/ingress.yaml
@@ -54,5 +54,5 @@ spec:
               servicePort: {{ .port }}
               {{- end }}
           {{- end }}
-    {{- end }}
+    # {{- end }}
 {{- end }}
