--- a/charts/one37id-keycloak/values.yaml
+++ b/charts/one37id-keycloak/values.yaml
@@ -6,51 +6,45 @@ keycloak:
   nameOverride: one37id-keycloak
   fullnameOverride: one37id-keycloak
   global:
-    storageClass: "ibmc-vpc-block-general-purpose"
+    storageClass: ibmc-vpc-block-general-purpose
   image:
-    pullpolicy: "Always"
+    pullpolicy: Always
   auth:
-    adminPassword: "one37id"
-    adminUser: "admin"
+    adminPassword: one37id
+    adminUser: admin
   containerPorts:
     http: 8080
     https: 8443
   service:
     type: ClusterIP
-    port: 8080
+    http:
+      enabled: true
+    ports:
+      http: 80
+      https: 443
+  proxy: edge
+  tls:
+    enabled: false
+    existingSecret: one37id-tls-dev
   ingress:
     enabled: true
-    className: "public-iks-k8s-nginx"
-    hosts:
-      - paths:
-          - path: /
-            pathType: Prefix
-            port: 8080
-    tls:
-      - secretName: tlsSecret
-        hosts:
-          - ibm-agentjs.dev-one37.id
+    ingressClassName: public-iks-k8s-nginx
+    hostname: keycloak.dev-one37.id
+    tls: false
+    extraTls:
+    - hosts:
+        - keycloak.dev-one37.id
+      secretName: one37id-tls-dev
+
+  logging:
+    output: default
+    level: DEBUG
 
   postgresql:
     enabled: true
     auth:
-      postgresPassword: ""
+      postgresPassword: "postgres"
       username: bn_keycloak
-      password: ""
+      password: "keycloak"
       database: bitnami_keycloak
-      existingSecret: ""
-      secretKeys:
-        userPasswordKey: password
     architecture: standalone
-
-  # master:
-  #   persistence:
-  #     size: 10Gi
-  #     persistentVolumeClaimRetentionPolicy:
-  #       enabled: true
-  #       whenScaled: Retain
-  #       whenDeleted: Delete
-  # replica:
-  #   replicaCount: 1
-  #   persistence:
-  #     size: 10Gi
